--- a/_01-00_nse.qmd
+++ b/_01-00_nse.qmd
@@ -31,7 +31,7 @@ and information gathered across multiple days of evaluation. Treatment planning
 and plans for test accommodations were discussed with {{< var first_name >}} during the
 feedback visit on the final day of the examination.
 
-## Background Information
+## Background
 
 The following information was obtained during an interview with {{< var patient >}} and from review of available medical records.
 {{< var first_name >}} has been doing well in {{< var his_her >}} classes since starting law school and has never failed.
