--- a/_01-00_nse.qmd
+++ b/_01-00_nse.qmd
@@ -68,19 +68,13 @@ Patient denied having prior testing.
 
 ### Behavioral/Emotional/Social
 
-Laborum enim culpa excepteur non dolore ut consequat officia nisi proident.
+Laborum enim culpa excepteur non dolore ut consequat officia nisi proident. Ea eiusmod eiusmod officia. Ut adipisicing magna nostrud aute in enim laboris ipsum amet. Ex est occaecat irure. Aliqua ea excepteur non ea dolore culpa commodo irure ipsum non. Ea in nisi laboris id laborum laborum reprehenderit officia in ad Lorem aliqua consectetur anim. Ex pariatur eu quis tempor. Amet veniam deserunt laborum do laborum eu ex.
 
 ### Educational History
 
 Ea eiusmod eiusmod officia. Ut adipisicing magna nostrud aute in enim laboris ipsum amet. Ex est occaecat irure. Aliqua ea excepteur non ea dolore culpa commodo irure ipsum non. Ea in nisi laboris id laborum laborum reprehenderit officia in ad Lorem aliqua consectetur anim. Ex pariatur eu quis tempor. Amet veniam deserunt laborum do laborum eu ex.
 
-Aliqua laborum consequat occaecat officia eu quis cillum culpa. Incididunt consequat occaecat non ullamco fugiat laboris tempor nulla. Magna amet nisi laboris eiusmod nostrud ut esse non eu irure esse. Enim amet mollit et ea labore nulla anim veniam eiusmod laboris irure.
-
 Magna quis excepteur aliqua do cillum est duis incididunt pariatur voluptate voluptate ullamco do. Consequat ea sit elit deserunt mollit consectetur laborum est eiusmod. Do cupidatat ad irure officia ea in nisi irure adipisicing. Sint culpa nulla do non ullamco aliquip id occaecat anim proident. Qui laboris tempor quis ullamco esse laborum deserunt. Magna proident consequat ex reprehenderit excepteur amet et est exercitation.
-
-### Occupational History
-
-Mollit pariatur ut laborum nulla proident aute. Eu laboris tempor consectetur id qui eu. Exercitation sint cupidatat ipsum fugiat cupidatat nulla nostrud culpa elit reprehenderit sit Lorem minim officia. Ex exercitation voluptate enim pariatur voluptate magna commodo. Aute fugiat ad deserunt sunt qui ipsum. Culpa ea proident aliquip irure veniam ut. Tempor id minim commodo.
 
 ### Cultural/Social Context
 
