--- a/_02-00_behav-obs.qmd
+++ b/_02-00_behav-obs.qmd
@@ -8,5 +8,5 @@
 - **Mood/Affect**: Neutral, range was full and appropriate.
 - **Sensory/Motor**: Performance was not limited by any obvious sensory or motor difficulties.
 - **Cognitive Process**: Coherent and goal directed.
-- **Effort/Validity**: Normal; Word Choice = 48/50, RDS = 10, DCT = 8.1, CVLT-3 Forced-Choice Recognition = 9/9.
+- **Effort/Validity**: Normal; Word Choice = ##/50, RDS = ##, DCT = ##, CVLT-3 Forced-Choice Recognition = ##/9.
 :::
