--- a/_01-00_nse.qmd
+++ b/_01-00_nse.qmd
@@ -23,6 +23,12 @@ bwu::save_as_markdown(text = txt, output_path)
 
 ## Reason for Referral
 
+<!-- Information to Include in Reason for Referral Section
+• List name and position of referral source
+• Reason the individual is to be evaluated—What questions are to be addressed?
+• Concerns of parent, caregiver, teacher, or examinee (if applicable)
+• Previous diagnoses, disabilities, or medical concerns -->
+
 {{< var first_name >}} {{< var last_name >}} is a {{< var age >}}-year-old, {{< var handedness >}}right-handed research assistant with {{< var education >}} years of education, including a B.A. in Hustling from the University of Brooklyn. {{< var he_she_cap >}} was referred in order to determine the nature and extent of neurocognitive sequelae emerging from a history of attention-deficit/hyperactivity disorder (ADHD).
 
 The purpose of the current evaluation is {{< var dx1 >}}, {{< var dx2 >}}, and
@@ -32,6 +38,17 @@ and plans for test accommodations were discussed with {{< var first_name >}} dur
 feedback visit on the final day of the examination.
 
 ## Background
+
+<!-- **Information to Include in Background Information Section**
+Provide pertinent information that has been obtained from all sources, including the referral source, family members, examinee, teachers, medical records, and so on. Do not include needless details or gossip. Following are examples of information that should be included:
+• Current family dynamics (spouse, children, siblings, etc.) 
+• Medical and psychiatric history
+• Developmental history
+• Educational history (note any special services)
+• Employment history (for adults) 
+• Previous therapeutic intervention 
+• Current stressors
+• Summary of past evaluations -->
 
 The following information was obtained during an interview with {{< var patient >}} and from review of available medical records.
 {{< var first_name >}} has been doing well in {{< var his_her >}} classes since starting law school and has never failed.
