--- a/_02-10_emotion_parent_text.qmd
+++ b/_02-10_emotion_parent_text.qmd
@@ -13,3 +13,4 @@ particularly in Social Skills, Leadership, Activities of Daily Living, and
 Functional Communication, indicating potential struggles with social
 integration, daily functioning, and communication.
 
+To obtain information regarding Jessica’s behavior and emotional function- ing in the home and at school, her mother and first-grade teacher, Shana Bellaros, completed the appropriate rating scales from the Behavior As- sessment Scale for Children–Second Edition (BASC-2). On the BASC-2, which compares a student’s social, emotional, and behavioral functioning in a variety of areas to other children in the same age range, Jessica’s mother and her teacher indicated that Jessica exhibits clinically significant and at-risk levels of attention problems, respectively. Both her mother and her teacher indicated that Jessica is almost always easily distracted and has a short attention span. Ms. Bellaros reported problems with hyperactivity falling in the clinically significant range while her mother indicated that she is at-risk for concerns in these areas. Ms. Bellaros indicated that Jessica almost always has trouble staying seated. Both respondents reported problems with poor self-control and impulsivity as occurring on an often basis. In the area of adap- tive functioning, Jessica’s mother and teacher indicated that she is at-risk for problems with functional communication. Her teacher reported that she is “never” able to describe her feelings accurately, and both respondents indi- cated that she is sometimes unclear when presenting ideas.
